<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:minWidth="300dp"
    android:minHeight="200dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/setting_bg"
    android:padding="@dimen/space_12">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/change_password_old"
        android:textSize="@dimen/text_size16"
        android:textColorHint="@color/tv_gray"
        android:id="@+id/et_old_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_20"
        android:hint="@string/change_password_new"
        android:id="@+id/et_new_password"
        android:textColorHint="@color/tv_gray"
        android:background="@null"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_20"
        android:hint="@string/change_password_new_repeat"
        android:textColorHint="@color/tv_gray"
        android:id="@+id/et_new_password_repeat"
        android:background="@null"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:background="@drawable/btn_selector"
        android:text="@string/dialog_ok"/>
</LinearLayout>