<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/semi_transparent"
        >

    <LinearLayout android:orientation="vertical" android:id="@+id/ll_add_name_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:background="@drawable/zxl_dialog_bg" android:layout_centerInParent="true" android:layout_marginLeft="@dimen/space_20" android:layout_marginRight="@dimen/space_20">

        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_20" android:layout_marginTop="@dimen/space_20">
            <TextView android:id="@+id/tv_my_way" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/edit_content" android:textColor="@color/black"
                      android:textSize="@dimen/text_size14"
                      android:layout_gravity="center_horizontal" android:layout_centerVertical="true"/>
            <EditText android:id="@+id/et_phone_num" android:layout_width="fill_parent" android:layout_height="38dip" android:layout_marginRight="@dimen/space_20"
                      android:hint="@string/touch_edit" android:textSize="@dimen/text_size14" android:textColor="@color/gray" android:background="@drawable/bg_edittext"
                      android:layout_toRightOf="@+id/tv_my_way" android:textCursorDrawable="@drawable/cursor_bg"  android:layout_marginLeft="@dimen/space_7" android:paddingLeft="@dimen/space_7"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/space_20"
                        android:layout_marginLeft="@dimen/space_20" android:layout_marginTop="@dimen/space_15">
            <TextView android:id="@+id/tv_limit_time" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/limit_time" android:textColor="@color/black"
                      android:textSize="@dimen/text_size14"
                      android:layout_gravity="center_horizontal" android:layout_centerVertical="true"
                      android:layout_alignParentTop="true"/>
            <LinearLayout
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                <com.jhlc.material.view.wheelview.WheelView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"/>

                <com.jhlc.material.view.wheelview.WheelView
                        android:id="@+id/hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginLeft="10dip"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/rl_confirm_edit" android:layout_width="fill_parent" android:layout_height="@dimen/btn_hight45" android:background="@drawable/btn_selector"  android:layout_marginBottom="@dimen/space_20"
                        android:clickable="true" android:layout_marginLeft="@dimen/space_20" android:layout_marginRight="@dimen/space_20" android:layout_marginTop="@dimen/space_15">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_centerInParent="true" android:gravity="center_vertical">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/btn_submit_selector"/>
                <TextView android:id="@+id/tv_feedback_submit" android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/confirm" android:textColor="@color/white" android:layout_marginLeft="@dimen/space_7" android:textSize="@dimen/text_size21"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <ImageButton android:id="@+id/img_close" android:layout_width="@dimen/btn_close" android:layout_height="@dimen/btn_close" android:background="@drawable/dialog_close_selector"
                 android:layout_alignTop="@+id/ll_add_name_dialog" android:layout_alignRight="@+id/ll_add_name_dialog"
                 android:layout_marginRight="-16dp" android:layout_marginTop="-16dp"/>

</RelativeLayout>